@@ -48,7 +48,10 @@ class tx_egovapi_domain_repository_viewRepository extends tx_egovapi_domain_repo
 	 * @param tx_egovapi_domain_model_audience $audience
 	 * @return tx_egovapi_domain_model_view[]
 	 */
-	public function findAll(tx_egovapi_domain_model_audience $audience) {
+	public function findAll(tx_egovapi_domain_model_audience $audience = NULL) {
+		if ($audience === NULL) {
+			throw new InvalidArgumentException('Audience cannot be null. This may be related to the use of an unsupported language for the web service.', 1299746801);
+		}
 		$id = $audience->getId();
 		if (isset(self::$viewsByAudience[$id])) {
 			return self::$viewsByAudience[$id];
